kubernetes/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  selector:
    matchLabels:
      app: dashboardapp
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboardapp
        tier: frontend
        track: stable
    spec:
      containers:
        - name: dashboard
          image: danvergara/dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
