kubernetes/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    service: dashboard
  name: dashboard
spec:
  selector:
    app: dashboard
  ports:
  - port: 8080
    targetPort: 80
