kubernetes/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard
        tier: frontend
        track: stable
    spec:
      containers:
        - name: dashboard
          image: danvergara/dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 80
