kubernetes/dashboardserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboardserver
spec:
  selector:
    app: dashboardapp
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
