kubernetes/dashboardserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboardserver
spec:
  selector:
    app: dashboardserver
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboardserver
spec:
  selector:
    matchLabels:
      app: dashboardserver
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: dashboardserver
        tier: backend
        track: stable
    spec:
      containers:
        - name: dashboardserver
          image: danvergara/dashboardserver:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
